<resources>
    <string name="app_name">Android_Labs2</string>
    <string name="FirstText">Look at my GUI</string>
    <string name="ButtonText">CLICK HERE</string>
    <string name="CheckBox">Check this out!</string>
    <string name="SwitchText">Switch on/off</string>
    <string name="hello_message">Hello World</string>
    <string name="TextHint">Type Here</string>
    <string name="ToastText">Here is more information</string>
    <string name="SnackText">Switch is now</string>
    <string name="SwitchOn">on</string>
    <string name="SwitchOff">off</string>

    <string name="FunctionMessage">in function: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>