<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="4"
        android:columnCount="2"
        >
        <TextView
            android:text="@string/FirstText"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2" />

        <Button
            android:text="@string/ButtonText"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="230dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:gravity="fill"
            />

        <CheckBox
            android:text="@string/CheckBox"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:gravity="fill"
            />

        <ImageButton
            android:src="@drawable/flag"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/mySwitch"
            android:text="@string/SwitchText"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:hint="@string/TextHint"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2" />


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>